# tomi

./: .gitattributes  .gitignore  README.md  analysis.md  device_traces.json  dump_structure.json  geometry.py  parse_dump.py  plot.ipynb  pretty_dict.json  pretty_dict.py  prompt.txt  run.sh  timeline.txt  trace.js  unzip.py  useful_sql.sql  verify_same.py
deprecated/: geometry.py
functionalities/: chatgpt.md  deepseek.md  design.md  gemini.md  prompt.md
generate_snapshot/: generate_snapshot.py  load.py  timeline.py  transformer.py
generate_snapshot/deprecated/: encoding.py  format.py  memory_snapshot_example_encoded.snap
snap-rs/: Cargo.toml
snap-rs/src/: allocation.rs  gen_options.py  lib.rs  load.rs  main.rs  repl.rs  repl_main.rs  snapshot.rs  utils.rs
snap-rs/src/cli_ops/: database.rs  memsnap.rs  mod.rs  peak.rs  sort.rs
snap-rs/src/repl_ops/: database.rs  memsnap.rs  mod.rs  peak.rs  sort.rs  timeline.rs
snapshots/: allocations.json  elements.json  snapshot.pickle
