[package]
name = "snap-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/repl_main.rs"


[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
zip = "4.0.0"
rustyline = "16.0.0"
clap = "4.5.39"
